--- a/templates/inscription.phtml
+++ b/templates/inscription.phtml
@@ -1,34 +1,38 @@
-<?php
-
-$password = $_SESSION['password'];
-
-$hash = password_hash($password, PASSWORD_DEFAULT);
-
-
-
-?>
-
-<main class="container">
+<main>
     <h1>
         Inscription
     </h1>
-    <form class="mt-5" action="logic/create-user.php" method ="post">
+    <form method="POST" action="logic/create_user.php">
         <fieldset>
-            <label for="email" class="form-label">Email</label>
-            <input type="email" id="email" name="email" class="form-control" />
+            <label for="email" >Email</label>
+            <input type="email" id="email" name="email"  />
+            <?php
+            if (isset($_GET["email"]) && $_GET["email"] === "set") {
+                echo "<p class='error'>EMAIL ALREADY EXIST</p>";
+            }
+        ?>
         </fieldset>
         <fieldset>
-            <label for="password" class="form-label">Mot de passe</label>
-            <input type="password" id="password" name="password" class="form-control" />
+            <label for="password" >Mot de passe</label>
+            <input type="password" id="password" name="password"  require/>
         </fieldset>
         <fieldset>
-            <label for="firstName" class="form-label">Prénom</label>
-            <input type="text" id="firstName" name="firstName" class="form-control" />
+            <label for="verifPassword">Verifier votre mot de passe</label>
+            <input type="password" id="verifPassword" name="verifPassword"  />
+            <?php
+            if (isset($_GET["password"]) && $_GET["password"] === "false") {
+                echo "<p class='error'> Password dosnt match</p>";
+            }
+        ?>
+        </fieldset>
+        <fieldset>
+            <label for="firstName" >Prénom</label>
+            <input type="text" id="firstName" name="firstName"/>
         </fieldset>
         <fieldset>
             <label for="lastName" class="form-label">Nom</label>
-            <input type="text" id="lastName" name="lastName" class="form-control" />
+            <input type="text" id="lastName" name="lastName"/>
         </fieldset>
-        <button type="submit" class="mt-3 btn btn-primary" name = "envoi">Sauvegarder</button>
+        <button type="submit">S'enregistrer</button>
     </form>
 </main>
