--- a/templates/list_resto.phtml
+++ b/templates/list_resto.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 $query = $db->prepare("SELECT * FROM restaurants");
 //$parameters = []
 $query->execute(/*$parameters*/);
@@ -8,29 +8,53 @@ $listResto = $query->fetchAll(PDO::FETCH_ASSOC);
 <?php 
 
 $query = $db->prepare("SELECT * FROM restaurants 
-                        JOIN recommanded ON id = restaurant_id 
-                        JOIN users ON id = user_id WHERE user_id = :id");
+                        JOIN recommanded ON restaurants.id = recommanded.restaurant_id 
+                        JOIN users ON users.id = recommanded.user_id WHERE users.id = :id");
 $parameters = [ 'id' => $_SESSION["id"] ];
 $query->execute($parameters);
 $recommanded = $query->fetchAll(PDO::FETCH_ASSOC);
 var_dump($recommanded);
 ?>
 
-<?php foreach($listeResto as $list){ ?>
+<?php foreach($listResto as $list){ ?>
     <article>
         <h3><?= $list["name"] ?></h3>
         <p> <?= $list["categorie"] ?></p>
         <p> <?= $list["location"] ?> </p>
         <img src=" <?= $list["photo"] ?> " alt="photo <?= $list["name"] ?>"/>
         <?php 
+        if ($recommanded) {
         foreach($recommanded as $recommand){
-            if($list["id"] === $recommand['id']) {
-                echo "<p>like</p>";
+            if($list["id"] === $recommand['restaurant_id']) {
+            ?>
+                 <form action='logic/dislike.php' method="POST">
+                    <input type='hidden' id="user_id" name="user_id" value='<?= $_SESSION['id']?>'>
+                    <input type='hidden' id= "restaurant_id" name="restaurant_id" value=<?= $list['id']?>> 
+                    <button>Dislike</button>
+                    </form>
+            <?php
             } else {
-                echo"<p> dislike</p>";
-            };
-        };
+                 ?>
+                 <form action='logic/like.php' method="POST">
+                    <input type='hidden' id="user_id" name="user_id" value='<?= $_SESSION['id']?>'>
+                    <input type='hidden' id= "restaurant_id" name="restaurant_id" value=<?= $list['id']?>> 
+                    <button>Like</button>
+                    </form>
+            <?php
+            }
+        }
+        } else {
+            ?>
+            <form action='logic/like.php' method="POST">
+                    <input type='hidden' id="user_id" name="user_id" value='<?= $_SESSION['id']?>'>
+                    <input type='hidden' id= "restaurant_id" name="restaurant_id" value=<?= $list['id']?>> 
+                    <button>Like quand y'a Rien dans la liste</button>
+                    </form>
+            <?php
+        }
         ?>
         <button type=submit> Détail </button>
     </article>
-<?php } ?>
+    <?php
+    }
+?>
