--- a/templates/connexion.phtml
+++ b/templates/connexion.phtml
@@ -1,3 +1,7 @@
+<?php if (isset($_SESSION["id"])) {
+    header("Location: index.php?route=list_resto");
+}else{
+?>
 <section class="container">
     <h1>Connexion</h1>
     <form id="loginForm" action="logic/login.php" method="POST">
@@ -23,3 +27,4 @@
     <a href="index.php?route=inscription">Vous n'êtes pas encore inscrit ?</a>
     </form>
 </section>
+<?php }?>
