--- a/layout.phtml
+++ b/layout.phtml
@@ -19,7 +19,7 @@
             </nav>
         <?php } ?>
     </header>
-<main class="container">
+<main class="article">
     <?php
     if ($route === "connexion") {
         require "templates/connexion.phtml";
